<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mst.restaurant.Activities.SignupActivity">

    <LinearLayout
        android:id="@+id/counLayId" android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp" android:textColor="@color/colorPrimary" android:textStyle="bold"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Select Country" />

                <Button
                    android:id="@+id/btn_close"
                    android:layout_width="25dp"
                    android:layout_height="25dp" android:textColor="#000000"
                    android:layout_alignParentRight="true"
                    android:layout_margin="10dp"
                    android:background="@mipmap/ic_close"
                    android:gravity="right" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/search_country"
                    android:layout_width="match_parent"
                    android:layout_height="50dp" android:textColor="#000000">
                    <requestFocus/>
                </EditText>

                <Button
                    android:id="@+id/btn_countrysearch"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="-27dp"
                    android:background="@mipmap/ic_search" />
            </LinearLayout>

            <ListView
                android:id="@+id/countrylist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></ListView>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/regLayId"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/signup_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/email_login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">


                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_name" android:textColor="#000000"

                            android:imeActionLabel="@string/action_sign_up_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textCapSentences"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_email"
                            android:textColor="#000000"
                            android:imeActionLabel="@string/action_sign_up_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_password"
                            android:imeActionId="@+id/login"
                            android:imeActionLabel="@string/action_sign_up_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="#000000"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">


                    <EditText
                        android:id="@+id/countrycode"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:editable="false"
                        android:gravity="center" android:textColor="#000000"
                        android:text="+966" />

                    <Button
                        android:id="@+id/btn_countrycode"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_weight="0" android:textColor="#000000"
                        android:background="@android:color/transparent" />


                    <EditText
                        android:id="@+id/mobilenum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@+id/countrycode"
                        android:digits="0123456789"
                        android:hint="@string/prompt_mobilenum"
                        android:imeActionLabel="@string/action_sign_up_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="phone"
                        android:maxLength="10" android:textColor="#000000"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <!-- <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">



                        <EditText
                            android:id="@+id/mobilenum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789"
                            android:hint="@string/prompt_mobilenum"
                            android:imeActionLabel="@string/action_sign_up_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="phone"
                            android:maxLength="10"
                            android:maxLines="1"
                            android:singleLine="true" />

                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btn_verify"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/colorPrimaryDark"
                        android:text="Verify"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        android:visibility="gone" /> -->


                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/signup_btn"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@color/primary_text_material_dark"
                        android:text="SIGN UP"
                        android:textColor="@android:color/white"
                        android:textSize="20dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>


        </ScrollView>
    </LinearLayout>
</LinearLayout>
