<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_my_profile"
    tools:context="com.mst.restaurant.Activities.MyProfileActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"   android:id="@+id/len3" >
        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="30dp"
            android:layout_height="30dp"

            android:id="@+id/btn_edit" android:background="@mipmap/ic_edit"
            android:layout_gravity="right" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent" android:layout_marginTop="2dp"
        android:layout_height="match_parent" android:layout_gravity="center"

         android:id="@+id/len1" >
    <LinearLayout
        android:orientation="horizontal" android:layout_gravity="left"
        android:layout_width="wrap_content" android:padding="10dp"
        android:layout_height="wrap_content"  >

        <ImageView
            android:layout_width="25dp" android:gravity="left"
            android:layout_height="25dp" android:layout_gravity="center"
            android:background="@mipmap/ic_name"
            android:id="@+id/tv_namee" />
        <TextView
            android:layout_width="wrap_content" android:layout_marginLeft="10dp"
            android:layout_height="wrap_content" android:layout_gravity="center"
            android:text="Name" android:gravity="center" android:padding="5dp" android:singleLine="true"
            android:id="@+id/tvname" android:textColor="@color/colorPrimary" android:textSize="18dp"
             />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal" android:layout_gravity="left"
        android:layout_width="wrap_content" android:padding="10dp"
        android:layout_height="wrap_content"  >

        <ImageView
            android:layout_width="25dp" android:gravity="left"
            android:layout_height="25dp" android:layout_gravity="center"
            android:background="@mipmap/ic_call"
            android:id="@+id/tv_mobb" />
        <TextView
            android:layout_width="wrap_content" android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content" android:padding="5dp" android:layout_marginLeft="10dp"
            android:text="MobilNum" android:layout_gravity="center" android:textSize="18dp"
            android:id="@+id/tvmob" android:singleLine="true"
             />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal" android:id="@+id/li1" android:layout_gravity="left"
        android:layout_width="wrap_content" android:padding="10dp"
        android:layout_height="wrap_content"  >

        <ImageView
            android:layout_width="25dp" android:gravity="left"
            android:layout_height="25dp" android:layout_gravity="center"
           android:textColor="@color/black"  android:background="@mipmap/ic_email"
            android:id="@+id/tv_order" />
        <TextView
            android:layout_width="wrap_content" android:textColor="@color/colorPrimary"
            android:layout_height="wrap_content" android:padding="5dp" android:layout_marginLeft="10dp"
            android:text="Email" android:layout_gravity="center" android:textSize="18dp"
            android:id="@+id/tvemail" android:singleLine="true"
            />
    </LinearLayout>
        <LinearLayout
            android:orientation="horizontal" android:id="@+id/li5" android:layout_gravity="left"
            android:layout_width="match_parent" android:padding="10dp"
            android:layout_height="wrap_content"  >

            <Button
                android:layout_width="match_parent"  android:id="@+id/btnlogout"
                android:layout_height="wrap_content" android:textColor="@color/white"
                android:layout_gravity="center_horizontal|bottom" android:textStyle="bold"
                android:textAlignment="center" android:layout_marginBottom="2dp"
                android:text="Logout" android:background="@color/secondary_text_material_dark"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:visibility="gone"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" android:id="@+id/len2" >
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/name" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_name"

                    android:imeActionLabel="@string/action_sign_up_short"
                    android:imeOptions="actionUnspecified" android:inputType="textCapSentences"
                    android:maxLines="1" android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/mobilenum" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_mobilenum"

                    android:imeActionLabel="@string/action_sign_up_short"
                    android:imeOptions="actionUnspecified" android:inputType="phone" android:maxLength="15" android:digits="0123456789"
                    android:maxLines="1"  />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_email"

                    android:imeActionLabel="@string/action_sign_up_short"
                    android:imeOptions="actionUnspecified" android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>



            <!--<Button android:id="@+id/submit_btn" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="Edit" android:background="@color/colorPrimaryDark"
                android:textStyle="bold" />-->
    <LinearLayout
        android:orientation="horizontal" android:id="@+id/li4"
        android:layout_width="match_parent" android:padding="10dp"
        android:layout_height="wrap_content"  android:layout_gravity="center_horizontal" >
        <Button
            android:id="@+id/submit_btn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Save" android:textSize="18dp"
            android:textColor="#ffffff"
            android:background="@color/secondary_text_material_dark"
            android:layout_gravity="center_horizontal"  />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:textSize="18dp"
            android:text="Cancel" android:layout_marginLeft="5dp"
            android:textColor="#ffffff"
            android:background="@color/secondary_text_material_dark"
            android:layout_gravity="center_horizontal"  />
       <!-- <Button android:id="@+id/submit_btn" style="?android:textAppearanceSmall"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:background="@color/secondary_text_material_dark"
            android:text="Save" android:layout_gravity="left"
            android:textColor="@android:color/white"
            android:layout_marginRight="20dp"
            android:textSize="17dp"
            android:textStyle="bold" />
        <Button android:id="@+id/cancel_btn" style="?android:textAppearanceSmall"
            android:layout_width="100dp" android:layout_height="wrap_content"
            android:background="@color/secondary_text_material_dark"
            android:text="Cancel" android:layout_gravity="right"

            android:layout_marginLeft="20dp"
            android:textColor="@android:color/white"
            android:textSize="17dp"
            android:textStyle="bold" />-->
    </LinearLayout>
        </LinearLayout>




</FrameLayout>
